Ação para enviar e-mail para autor

--- a/wp_revista.css
+++ b/wp_revista.css
@@ -39,3 +39,16 @@ p.avaliacao-success {
   text-align: center;
   font-size: 150%;
 }
+
+.feedback {
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.feedback.success {
+  background-color: #d9edf7
+}
+
+.feedback.error {
+  background-color: #f2dede
+}
